Добавлен магазин кораблей, изменено соотношение сторон сетки - удалена кривая отзывчивость

--- a/src/components/PlayerZone/PlayerZoneField/PlayerZoneField.scss
+++ b/src/components/PlayerZone/PlayerZoneField/PlayerZoneField.scss
@@ -4,8 +4,8 @@
     // border: 1px solid rgba(1, 5, 133, 0.458);
 
     display: grid;
-    grid-template-columns: repeat(11, calc(40vw / 11));
-    grid-template-rows: repeat(11, calc(40vw / 11));
+    grid-template-columns: repeat(11, 37px);
+    grid-template-rows: repeat(11, 37px);
 }
 
 .player-zone__block {
@@ -14,4 +14,10 @@
     align-items: center;
 
     border: 1px solid rgba(1, 5, 133, 0.458);
+
+    &:not(.player-zone__block--blocked) {
+        &:hover {
+            background-color: #000;
+        }
+    }
 }
