--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,6 +1,7 @@
 .game {
+    padding-bottom: 30px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     &-bg {
         position: absolute;
