--- a/src/components/PlayerZone/PlayerZone.scss
+++ b/src/components/PlayerZone/PlayerZone.scss
@@ -2,10 +2,11 @@
     padding-left: 40px;
     padding-right: 40px;
 
-    width: 40vw;
+    width: 525px;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     &__scores {
         padding: 12px;
