Логика длины корабля и направления его ориентации при клике выводить его будущие границы на поле реализована

--- a/src/components/PlayerZone/PlayerZoneField/PlayerZoneField.scss
+++ b/src/components/PlayerZone/PlayerZoneField/PlayerZoneField.scss
@@ -15,9 +15,7 @@
 
     border: 1px solid rgba(1, 5, 133, 0.458);
 
-    &:not(.player-zone__block--blocked) {
-        &:hover {
-            background-color: #000;
-        }
+    &.player-zone__block--blocked {
+        pointer-events: none;
     }
 }
