Инициализирован собственный State у ShipShop, чтобы отслеживать, какие корабли были отстроены, лишая игрока возможности выбрать этот корабль для постройки вновь

--- a/src/components/PlayerZone/PlayerZoneShipShop/PlayerZoneShipShop.scss
+++ b/src/components/PlayerZone/PlayerZoneShipShop/PlayerZoneShipShop.scss
@@ -32,7 +32,8 @@
         width: 37px;
     }
 
-    &--chosen {
+    &--placed {
+        pointer-events: none;
         filter: opacity(0.3)
     }
 }
