--- a/src/components/PlayerZone/PlayerZone.scss
+++ b/src/components/PlayerZone/PlayerZone.scss
@@ -23,4 +23,29 @@
             margin-left: auto;
         }
     }
+
+    &__start {
+        margin-top: 20px;
+        background-color: transparent;
+        border: 1px solid #0f0;
+        border-radius: 5px;
+        padding: 7px 20px;
+        cursor: pointer;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.363);
+
+        &:hover {
+            background-color: #0f0;
+            animation: shineGreen 1s linear 0s infinite alternate;
+
+            @keyframes shineGreen {
+                0% {
+                    filter:brightness(100%);
+                }
+                100% {
+                    filter:brightness(90%);
+                }
+
+            }
+        }
+    }
 }
