--- a/src/components/PlayerZone/PlayerZoneField/PlayerZoneFieldBlock/PlayerZoneFieldBlock.scss
+++ b/src/components/PlayerZone/PlayerZoneField/PlayerZoneFieldBlock/PlayerZoneFieldBlock.scss
@@ -15,6 +15,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        background-color: transparent !important
     }
 }
 .ship__decks {
