Логика рандомшота у бота. Добавлен счетчик хода. Добавлено состояние корня, включающее в себя состояние обоих полей для передачи их в бота. Добавлено состояние ячеек, которые были прострелены врагом на своем поле. Отслеживается стрельба, id попадания сравнивается с массивом позиционированных кораблей, если такой id есть в массиве, счетчик хода меняется без смены текущего игрока, иначе сменяется текущий игрок.

--- a/src/components/PlayerZone/PlayerZoneField/PlayerZoneFieldBlock/PlayerZoneFieldBlock.scss
+++ b/src/components/PlayerZone/PlayerZoneField/PlayerZoneFieldBlock/PlayerZoneFieldBlock.scss
@@ -18,6 +18,12 @@
 
         background-color: transparent !important
     }
+    &.player-zone__block--hover {
+        &:hover {
+            cursor:crosshair;
+            background: url(https://img.icons8.com/wired/512/define-location.png) center center/contain !important
+        }
+    }
 }
 .ship__decks {
     &-1 {
