--- a/src/components/PlayerZone/PlayerZoneShipShop/PlayerZoneShipShop.scss
+++ b/src/components/PlayerZone/PlayerZoneShipShop/PlayerZoneShipShop.scss
@@ -11,6 +11,7 @@
 .player-zone__ship {
     display: flex;
     align-items: center;
+    cursor: pointer;
     
     img {
         max-width: 100%;
@@ -34,6 +35,7 @@
 
     &--placed {
         pointer-events: none;
-        filter: opacity(0.3)
+        filter: opacity(0.3);
+        cursor: default;
     }
 }
