--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -24,15 +24,39 @@
     }
     &__item {
         border: 3px solid rgba(1, 6, 133, 0.829);
+        color: black;
+        text-decoration: none;
         padding: 7px 20px;
         position: relative;
         cursor: pointer;
 
         font-size: 20px;
 
+        span {
+            display: none;
+        }
+
         &:hover {
             background-color: rgba(1, 6, 133, 0.829);
             color: #fff;
+
+
+            span {
+                display: block;
+                position: absolute;
+
+                top: 100%;
+                left: 100%;
+
+                width: max-content;
+
+                background: rgba(128, 128, 128, 0.462);
+                border: 1px solid rgba(1, 6, 133, 0.829);
+                border-radius: 5px;
+                padding: 10px;
+
+                font-size: 12px;
+            }
         }
 
         &:after {
@@ -56,6 +80,12 @@
             background: rgba(255, 255, 255, 0.9);
             border-right: 3px solid rgb(1, 5, 133);
             transform: rotateZ(45deg);
+        }
+        &--blocked {
+            &:hover {
+                background: rgba(128, 128, 128, 0.47);
+                color: black;
+            }
         }
     }
     &__ship {
