--- a/src/components/InstructionsModal/InstructionsModal.scss
+++ b/src/components/InstructionsModal/InstructionsModal.scss
@@ -30,6 +30,7 @@
 
         display: flex;
         flex-direction: column;
+        position: relative;
     }
 
     &__slide {
@@ -72,5 +73,23 @@
             transform: translate(2px,2px);
             box-shadow: none;
         }
+
+        &--next {
+            margin-left: auto;
+        }
+        &--prev {
+            margin-right: auto;
+        }
+    }
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        font-size: 20px;
+        font: Arial;
+        font-weight: 900;
     }
 }
